fix: social media bar background on dark mode

--- a/src/styles/_responsiveness.scss
+++ b/src/styles/_responsiveness.scss
@@ -55,7 +55,7 @@
         justify-content: center;
     }
     .social-media {
-        background-color: $primary-opac-lightMode !important;
+        background-color: $primary-opac;
         margin-top: 80px;
         padding: 12px 0;
         ul {
@@ -88,6 +88,11 @@
     #footer {
         margin-top: 0;
     }
+    .light {
+        .social-media {
+            background-color: $primary-opac-lightMode !important;
+        }
+    }
 }
 
 //changing element attributes for screen smaller than 540px to enable responsiveness
@@ -112,22 +117,22 @@
     #contact {
         @include mobile-margin;
         position: relative !important;
-        background: transparent !important {
-            
-        };
+        background: transparent !important    {
+
+        }
         width: 90% !important;
         .exit-box {
             visibility: hidden !important;
         }
         margin: 0 auto !important;
     }
-    .light{
-        #contact{
-            input,textarea{
+    .light {
+        #contact {
+            input,
+            textarea {
                 background: rgba(189, 189, 189, 0.744);
-
             }
-    }
+        }
     }
     .navbar {
         height: 45px !important;
